# hanzo

./: .dockerignore  .env.example  .gitignore  .readthedocs.yml  CHANGELOG.md  CHANGELOG_0.6.12.md  CHANGELOG_0.6.13.md  CHANGES.md  CLAUDE.md  CONTRIBUTING.md  ClaudeCode.md  DEPLOYMENT_README.md  Dockerfile  HANZO_TOOLS_LIST.md  KODING.md  LIBRECHAT_INTEGRATION.md  LLM.md  LOGGING_CONVERSION_SUMMARY.md  Makefile  README.md  RELEASE_NOTES_0.6.13.md  RELEASE_STATUS_0.6.12.md  TEST_SETUP.md  TOOLS_DOCUMENTATION.md  build-docs.sh  install.bat  install.sh  package.json  publish.sh  pyproject.toml  requirements-chroma.txt  requirements.txt  setup_github.sh  test_simple.py  update_cli.sh
.github/workflows/: build-dxt.yml  docs-cloudflare.yml  release.yml  test.yml
dev_mcp/tools/filesystem/: file_operations.py
dev_mcp/tools/jupyter/: notebook_operations.py
doc/: IDE_INTEGRATION.md  INSTALL.md  debug.md  system_prompt  system_prompt.md
docs/: CUSTOM_TOOLS.md  DXT_INSTALLATION.md  IDE_INTEGRATION.md  INSTALL.md  MCP_SECURITY.md  MCP_SSE_CONNECTION_GUIDE.md  README.md  SYSTEM_PROMPTS.md  TESTING.md  USEFUL_PROMPTS.md  _headers  conf.py  index.rst  new_tools.md  requirements.txt  system_prompt  tools.rst
docs/_static/: custom.css
docs/archive/: test_guide.md  test_improvements_summary.md  testing_improvements.md
docs/concepts/: tools-philosophy.rst
docs/getting-started/: installation.rst  quickstart.rst
docs/guides/: README.md
docs/media/: README.md
docs/prompts/: README.md  ide_system_prompt.txt  mcp_system_prompt.txt
docs/source/: conf.py  debugging.md  ide-integration.md  index.rst  installation.md  prompts.md  quick-start.md  security.md  system-prompt.md
docs/tools/: file-operations.rst
dxt/: README.md  build_dxt.py  icon_placeholder.md  manifest.json
examples/: external-servers.json  mcp-registry.json
hanzo_mcp/: __init__.py  cli.py  cli_meta.py  meta_mcp.py  server.py
hanzo_mcp/config/: default_tools.json  settings.py
hanzo_mcp/debug/: __init__.py
hanzo_mcp/rules/: __init__.py
hanzo_mcp/rules/javascript/: __init__.py  javascript-nextjs-cursorrules.rules
hanzo_mcp/rules/python/: __init__.py  python-fastapi-cursorrules.rules
hanzo_mcp/rules/typescript/: __init__.py  typescript-nextjs-tailwind-cursorrules.rules
hanzo_mcp/tools/: __init__.py  cursor_rules.py  dev_tool.py  llm_file_manager.py  mcp_manager.py  mcp_orchestrator.py  proxy_handler.py
hanzo_mcp/tools/agent/: litellm_provider.py
hanzo_mcp/tools/auth/: __init__.py  auth_tool.py
hanzo_mcp/tools/common/: context.py  llm_providers.py  logging_config.py  palette.py  thinking.py
hanzo_mcp/tools/config/: palette_tool.py
hanzo_mcp/tools/filesystem/: __init__.py  diff.py  edit_file.py  grep_ast_tool.py  read.py  read_files.py  search_content.py
hanzo_mcp/tools/parallel/: __init__.py  parallel_tool.py
hanzo_mcp/tools/project/: analysis.py
hanzo_mcp/tools/shell/: bash_unified.py  command_executor.py  npx_unified.py  process_unified.py  uvx_unified.py
hanzo_mcp/tools/symbols/: __init__.py  ast_explorer.py  symbol_finder.py  symbolic_search.py  tree_sitter_manager.py
hanzo_mcp/tools/vector/: __init__.py  git_ingestor.py  infinity_store.py  store_manager.py
mcp_claude_code/: __init__.py  cli.py  commands.py  context.py  enhanced_commands.py  executors.py  permissions.py  project.py  server.py  tool_integration.py
mcp_claude_code/tools/: __init__.py
mcp_claude_code/tools/agent/: __init__.py  agent_tool.py  prompt.py  tool_adapter.py
mcp_claude_code/tools/common/: base.py  context.py  permissions.py  thinking_tool.py
mcp_claude_code/tools/filesystem/: __init__.py  base.py  content_replace.py  directory_tree.py  edit_file.py  file_operations.py  get_file_info.py  navigation.py  read_files.py  search_content.py  write_file.py
mcp_claude_code/tools/jupyter/: __init__.py  base.py  edit_notebook.py  read_notebook.py
mcp_claude_code/tools/project/: __init__.py  analysis.py  project_analyze.py
scripts/: bump_version.py  fix_async_tests.py  hanzo-mcp-version  install_desktop.py  install_uv.sh  standardize_quotes.py  update_version.py  version.py
src/: cli.ts  index.ts
src/prompts/: system.ts
src/tools/: edit.ts  file-ops.ts  index.ts  search.ts  shell.ts
src/types/: index.ts
tests/: __init__.py  benchmark_search.py  benchmark_simple.py  benchmark_unified_search.py  conftest.py  conftest_new.py  test_basic.py  test_cli.py  test_cursor_rules.py  test_enhanced_commands.py  test_executors.py  test_mcp_manager.py  test_meta_mcp.py  test_server.py  test_symbols.py  test_tool_context.py  test_tools_registration.py
tests/test_agent/: .gitignore  check_openai_api.py  test_agent_tool.py  test_litellm_providers.py  test_model_capabilities.py  test_prompt.py  test_tool_adapter.py
tests/test_common/: __init__.py  test_context.py  test_enhanced_thinking.py  test_hidden_files.py  test_llm_providers.py  test_logging_config.py  test_mcp_description.py  test_path_utils.py  test_permissions.py  test_session.py  test_think_tool.py  test_thinking.py  test_thinking_tool.py
tests/test_external/: __init__.py  test_mcp_manager.py
tests/test_filesystem/: README.md  __init__.py  test_file_operations.py  test_fs_tools.py  test_grep_ast_simple.py  test_grep_ast_tool.py  test_regex_search.py  test_write_file.py
tests/test_jupyter/: __init__.py  test_notebook_operations.py
tests/test_project/: __init__.py  test_analysis.py
tests/test_shell/: __init__.py  test_command_executor.py  test_inverse_session.py  test_session_commands.py
(+6 files in other folders)
