[project]
name = "mcp-claude-code"
version = "0.1.1"
description = "MCP implementation of Claude Code capabilities"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["mcp>=1.3.0", "httpx>=0.27", "uvicorn>=0.23.1", "pynvim>=0.5.2"]

[project.scripts]
claudecode = "mcp_claude_code.cli:main"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mcp_claude_code"]

[tool.basedpyright]
exclude = [
  "**/node_modules",
  "**/__pycache__",
  "src/experimental",
  "src/typestubs",
]
pythonVersion = "3.12"
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnusedCallResult = false
reportIgnoreCommentWithoutRule = false
reportUnusedParameter = false
reportAny = false
reportRedeclaration = false
reportExplicitAny = false
reportMissingTypeArgument = false
reportUnusedFunction = false
reportUnknownParameterType = false
