[project]
name = "mcp-claude-code"
version = "0.1.2"
description = "MCP implementation of Claude Code capabilities"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
  {name = "SDGLBL", email = "sdglbl.me@gmail.com"}
]
keywords = ["mcp", "claude", "ai", "llm", "code-assistant"]
urls = {
  "Homepage" = "https://github.com/SDGLBL/mcp-claude-code",
  "Bug Tracker" = "https://github.com/SDGLBL/mcp-claude-code/issues",
}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Code Generators",
  "Intended Audience :: Developers",
  "Development Status :: 4 - Beta",
]
# Core dependencies required for main functionality
dependencies = ["mcp>=1.3.0", "httpx>=0.27.0", "uvicorn>=0.23.1"]

[project.optional-dependencies]
# Development dependencies for local development
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.1.0",
  "black>=23.3.0",
  "mypy>=1.5.0",
  "pre-commit>=3.3.0",
]
# Testing dependencies specifically for running tests
test = [
  "pytest>=7.0.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.10.0",
  "pytest-asyncio>=0.25.3",
  "twisted",
]
# Documentation dependencies
docs = ["sphinx>=7.0.0", "sphinx-rtd-theme>=1.2.0", "myst-parser>=2.0.0"]
# Optional performance enhancement dependencies
performance = ["ujson>=5.7.0", "orjson>=3.9.0"]

[project.scripts]
claudecode = "mcp_claude_code.cli:main"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mcp_claude_code"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["."]

[tool.basedpyright]
exclude = [
  "**/node_modules",
  "**/__pycache__",
  "src/experimental",
  "src/typestubs",
]
pythonVersion = "3.12"
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnusedCallResult = false
reportIgnoreCommentWithoutRule = false
reportUnusedParameter = false
reportAny = false
reportRedeclaration = false
reportExplicitAny = false
reportMissingTypeArgument = false
reportUnusedFunction = false
reportUnknownParameterType = false
