[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hanzo-mcp"
version = "0.1.29"
description = "MCP server for accessing Hanzo APIs and Platform capabilities"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Hanzo", email = "dev@hanzo.ai" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["mcp>=1.3.0", "httpx>=0.27.0", "uvicorn>=0.23.1", "mcp", "pytest", "logging"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.1.0", "ruff>=0.1.0", "black>=23.3.0"]
test = [
  "pytest>=7.0.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.10.0",
  "pytest-asyncio>=0.25.3",
  "twisted",
]
performance = ["ujson>=5.7.0", "orjson>=3.9.0"]
vector = [
  "chromadb>=0.4.18", 
  "sentence-transformers>=2.2.2", 
  "python-docx>=0.8.11", 
  "PyPDF2>=3.0.0", 
  "pillow>=10.0.0"
]
rules = ["pyyaml>=6.0.0"]
subservers = [
  "aiohttp>=3.8.0"
]
all = [
  "ujson>=5.7.0", 
  "orjson>=3.9.0", 
  "chromadb>=0.4.18", 
  "sentence-transformers>=2.2.2", 
  "python-docx>=0.8.11", 
  "PyPDF2>=3.0.0", 
  "pillow>=10.0.0",
  "pyyaml>=6.0.0",
  "aiohttp>=3.8.0"
]

[project.scripts]
hanzo-mcp = "hanzo_mcp.cli:main"
hanzo-mcp-servers = "hanzo_mcp.external.cli:main"
hanzo-meta-mcp = "hanzo_mcp.cli_meta:main"

[tool.setuptools]
zip-safe = true

[tool.setuptools.package-data]
"hanzo_mcp.rules" = ["**/*.rules", "**/*.cursorrules"]

[tool.setuptools.packages.find]
where = ["."]
include = ["hanzo_mcp*"]

[tool.bdist_wheel]
universal = true

[tool.basedpyright]
include = ["hanzo_mcp"]
exclude = [
  "**/node_modules",
  "**/__pycache__",
  "src/experimental",
  "src/typestubs",
]
pythonVersion = "3.13"
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnusedCallResult = false
reportIgnoreCommentWithoutRule = false
reportUnusedParameter = false
reportAny = false
reportRedeclaration = false
reportMissingTypeArgument = false
reportExplicitAny = false
reportUnusedFunction = false
